// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros @inject store: @inject store 1`] = `

import { inject } from '../inject.macro';

class FooComponent extends Template {
    @inject store;
}

      ↓ ↓ ↓ ↓ ↓ ↓

class FooComponent extends Template {
    get store() {
        return this.DI.resolve('store');
    }

}

`;

exports[`macros @inject('sham-ui:store') store: @inject('sham-ui:store') store 1`] = `

import { inject } from '../inject.macro';

class FooComponent extends Template {
    @inject('sham-ui:store') store
}

      ↓ ↓ ↓ ↓ ↓ ↓

class FooComponent extends Template {
    get store() {
        return this.DI.resolve('sham-ui:store');
    }

}

`;

exports[`macros with imported DI as alias: with imported DI as alias 1`] = `

import { DI as di } from 'sham-ui'; 
import { inject } from '../inject.macro';
class Service {
    @inject api;
    @inject( 'sham-ui:store' ) uiStore;
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { DI as di } from 'sham-ui';

class Service {
    get api() {
        return this.DI.resolve('api');
    }

    get uiStore() {
        return this.DI.resolve('sham-ui:store');
    }

}

`;

exports[`macros with imported DI: with imported DI 1`] = `

import { DI } from 'sham-ui'; 
import { inject } from '../inject.macro';
class Service {
    @inject api;
    @inject( 'sham-ui:store' ) uiStore;
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { DI } from 'sham-ui';

class Service {
    get api() {
        return this.DI.resolve('api');
    }

    get uiStore() {
        return this.DI.resolve('sham-ui:store');
    }

}

`;
